tests/errors/types/qualified-path-non-type.fn
---
Description: Qualified path resolves to a field, not a type
Expected: FN3202
---

type Foo
{
    x: i32
    init{}
}

type Program
{
    fn Main -> i32
    {
        var a: Foo.x = 5
        return 0
    }
}
